change domain name

--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:kwiDWVcT,iv:J7TBAlCl3cc2jS1/kK3p18MCTzZgOrkUmiUQFSYZ9yU=,tag:tHb6JX+wgNMUyrdDVh/0lQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:L0f72+27,iv:Op7wF+cMwrGe7j8XKfQZm2PYWt9UDvec4kG9lc2Q4KA=,tag:ODikK2IEl80AbwHO5DoK0Q==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:QUaoi82z,iv:7AcGxb5sp5F6sjU9gdaNdwQEuzyLa4OODy3mOyI8Gow=,tag:sWGkvBXxINMYGOMtlQq60w==,type:str]
+kind: ENC[AES256_GCM,data:GVpdPvX/,iv:UjSf1uSGVPZncSPDmxZVUeLYFiHRhQ7k2D7OQto/Gno=,tag:flnwqTb1ObdfTe6wnYOqeg==,type:str]
+ansible_user: ENC[AES256_GCM,data:03GEcfIP,iv:xZEMkEcYc/0MY4JwQK0Qtr7whzSCtkxgKjWeHjclp3w=,tag:rUPHHjc7KOrqO+rPK3Y4Og==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:CX3rqkii,iv:vNOkwU1lDDuuRDr95fKGrJaPiIVpoK6QymnDykSxRjk=,tag:7jyAtoLMY8Ij0Xl1qx6uyA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSakkyaXIxMFVsYTJadyts
-            ZVI5cGZsTmY0MUhJZVgxczJoNThLMStaRkdJCkFpc09JWUE1UTBQUi94a1RXZEZw
-            TmE2MGx4RUZ6MU96OW5yRXo4M01Hdk0KLS0tIEU4NTFGSDAxZ2FyMjFFdytPWWNj
-            WXBBN0ljRUZBRHYrTjlBRXdmR3dVbU0KUjDICKtzV8/s3Nk+tBNkDUsaIZ+VFDzS
-            u46mcEx4pvB2JTPnoiP25yg2E6misg3v0jImth4PQJl/KfjNjXZ8sQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFWjZyb1VveXRjck8xL09J
+            UHZmUWVKNXFwNUh4RVRHQUNnY3gySWVDbnk0CmpQMUdYc0VSQ0lKUjEyMm1IU25B
+            WWtIU1grdWxpU3NzUmdxelp1QjZldUkKLS0tIEQ4d1pnWHJIaG9PWjdudW5BV0RR
+            OWZIcGVMYlJGVHNXSkh5aUYzellQZlUKF4UQaPWBa24pjfbat1K7ZZ9sgJnekInC
+            K1mu3BeVWBsWc7rFtrIbhmusw77Yp534Y0ldVP4p8LIxJoV16uMgow==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:51:34Z"
-    mac: ENC[AES256_GCM,data:/4Qwh7LBuD6f0YhUxCqDjMQ45796vyI2LlGSAILlQ8uyNqF3dI7cUA0UelONuVaSNVBwx0H1l0CfbAZndOtdEogcJcXYC0aV3MolwfRaCHI2vtL55amRrIo+S+trw5CZ5LbIdmZ8NRUP0E1bmu/dlSqPck3CMS63cgB7OtbLbDk=,iv:Yr/ytwxNptVPYdxhESvp1LzQw2J9xD6Go6u1AHJtZMU=,tag:rDNRvcnIbklLyMkj6Thtow==,type:str]
+    lastmodified: "2023-02-08T20:02:16Z"
+    mac: ENC[AES256_GCM,data:fPTQJvYOSQczGOEPBHw80HGVd9cCCBzRQE3+DNwhtJEANcuvUZEoQ8pqUTrpF+uxZrumS7UEj/FQ8w4DMfTNWmjk4ZwL4yaqJLqVYtWoE6+MYhn/sidn4sLGHjsL4JswR96TTNfAbq+RADxl0hs3RRn4rNLgHiRzxmChZzXjl8U=,iv:4RQjCGIfh/fZu9M57GOaSv+NZjp9N9InQYax/p66jzY=,tag:hiKc0P9cJYUP2Lr4g7arZA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
