--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:0rpDhZxk,iv:GWXW8bUkE8ddUGCXK8TV5KTXpVGZ1McVVrz9Ysmwzoo=,tag:/lsAV+RZimdHktOHrfwQww==,type:str]
-ansible_user: ENC[AES256_GCM,data:ouWV8gzX,iv:EmDSOmnQmR1DmeYde5lm0gbOCbsSkwjVfTzgnTW1WuI=,tag:O/txCKnHAyyW54y3rLennQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:+6WxemW2,iv:Vxes7D8sEAqR9gOBcddDSiFJFD+WDub8gn1vL1GP93E=,tag:O1x2d2tok9rTxjuRKLjxVQ==,type:str]
+kind: ENC[AES256_GCM,data:Z5MR70TK,iv:LYR3WSg2anbfPHXXa+Jt0LBLrMhpKc4XA9A4ye4lZu4=,tag:ON+HuaEaaRMprvBCWIHlJQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:Ots9MhfY,iv:F6+zhlmXKO5fv4r7tjPEMch04Z3I+tamcYp7wOBC8NE=,tag:ObLI+oA/8HQ6wvaWNK48XQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:fdCMPtFG,iv:lNCceP3Zr0hzhPPZd+uqqf8jxPrV5TWcLzdx7B0WZLk=,tag:OAIyisZT964ParRYP9gTXg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPZDg2Sk53SUQvNzR0Y293
-            M0tFNXNnY1pGNkFxMzNkZFRRUTQ3TEVzVmxFCnhiSkc3VFJGdUFZSXozb2todE11
-            NDd3TkIzTnFObW5ibDZPaXZ4STFYbm8KLS0tIG16WWFWNzBrZy85RExuSW9xNHJm
-            K3lpd0VBUVFCS2cyd1VYQ0djdG9PMHcKMTQxU3OZv1GGYSp5k0Qmu9YPLH7cx8tO
-            Yyo77434gr5iHweP1VM5WmqQxIsv1Q5oY24KlnqKsbMVyp25ydg50w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYaGRMcjExbklBd1hLdm9w
+            aHhCQTFPTkx5VmhNOFAwdStNdzRzWkZxUFVrClZuOXA3dU9qTytqUFNUcXhtbFJP
+            R2dZUjg3WmF1SDNRUXdxbDk0SHZDK28KLS0tIFBiajYweWZ0RVdtRkdyeGpZS21q
+            MnBVOVBWWEpjd084YWszYVFNbDZKcU0K4Z4K+j6DZ1oJzk/Rk06IsbHu2gsMLeF0
+            seDC6rDJO/YX6Z5PyNvlU2HfYXqqnqR08T8Jad6e4zTNDDf7aCBbEw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:51:34Z"
-    mac: ENC[AES256_GCM,data:XMQnD1W5CTD0GhZzqkF+54T20r1LpBVP1c93Etq8as0BZluVoJeK/qa9GWyIQAV57mzkjsbWvwbiOFajSkELFWNL190DNf3mdFB698q9vjo91gGRPatu9yg121XyYpVYss6vPD3HTj4uBpHQl4Jg6aTYJOBOPdcRQiy6ck5fwBw=,iv:a4VF9VNf5UMtbe1CEzDlTnyr6i/mmDpCYVhk529+f7s=,tag:VyM63VvDbwdRvyKcAJi6/A==,type:str]
+    lastmodified: "2023-02-08T20:02:16Z"
+    mac: ENC[AES256_GCM,data:R6f2gueorvlr3Mh8pPSHY9ZQyXQZi6mFyrjVei6cD7vzcQqTcq8RAiNVNMbCd7nIXB0PNLal6Ttj1gZBb9ByzbGsHNOULwiLKFuCQFLE0jFxz2mok9iixkqAtCCudW1p8PZ05ZhYJ+1ItLl0TrL/Oomg4NyNmP166Ed/dpK30Cw=,iv:jr2xWGVjivj/myGTszV7LvdRFkD8uaMxYdNP0fYcXHk=,tag:JV/19p2VKyaq/tESwzsFwQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
