--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:EYQcVo9V,iv:yYEpXMTrTD2bz+rcW/Nph1T7OswfbkjLbBzzkvIoZOY=,tag:Fn5BHYCLoK4fAybXpvyuKw==,type:str]
-ansible_user: ENC[AES256_GCM,data:6moZgJF0,iv:bwfxfyroby4LVXRzb1CJUfJTZTBj9zmuGDyZS9hb1QA=,tag:jRoTjbqs2PpvbXbo6uz1Lg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:w/1xrU92,iv:AYbx+E8rGeuXG/39ZBj0wUVZ/Js5Y8rzmBNQyBpwYow=,tag:dS98OhukHB0wzzIWyz5Reg==,type:str]
+kind: ENC[AES256_GCM,data:owsbrCZQ,iv:bWtjknus1Dc2mTBYBGTK1QkXNmWS+R4GyxJ3tRoKgyI=,tag:z6yVcdykjpW/rkdiUR8eJw==,type:str]
+ansible_user: ENC[AES256_GCM,data:8gV5QXyk,iv:3lxIKmBR1WswPZXzvhwSOb/WakUiIhGUCWZpI3qjG9I=,tag:9+SfptoiyNg9jlGVta2Yiw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:GjrkP5M/,iv:HyKznvQro9OHPbibF10ylO5K4AsrPrzVIXMJHdpAxA0=,tag:cEj526vL9Uca7KHV7q+Xjg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0OVVHQlNja0dEWkZnSEY0
-            dUpjOHEyd0E2Sk01ZkRkK1ZwSlp0ZGg3MFU0CnhEeGFyTyszR1ZiREVVVFZwdy9S
-            ME55UGdVNmlzN1ZJb2RGTmt2L3cvSTgKLS0tIHdLajk2MWV4L0tUVkJmWHJxMHQr
-            dXdzWDNqcjFsMjBQT2x2VUhYWmczdWsKmCTjcdRWOxesUo2GrIoHiVq1DBH1IZhI
-            qSOUFUH+bVWeDKOiUfaPlbg3yVNeOlYqaeChcUo/FW/98EHICgAnlQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBacHp0d1phWll5ZlB1UHZC
+            ZHZLZW1kUlVlSDN0TVVDWnVrQ042dUpRRms4ClptRUNqbkF5K2lqK2UyaENQY0ts
+            TnhoUUd6MDVOQU15WmdrYlppbE9oMjAKLS0tIHJTbXlZcWF5bTRCemR3dStmSGpC
+            OVYwa2R5S3QwWmJzSENVNkZLWlBUOUkKNs6tO3IPJm+UVB1E8aRrylMiagpqsVmA
+            a3T6ytKU2zU563SqVN43zl9sYC55s1nkIlfXOQblnGp8kNqS6o2n5w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:51:34Z"
-    mac: ENC[AES256_GCM,data:Nqrd2gUg4vVOEitC1C4wM9BHj98wXh+yEe5hjlDSfDtYbdsChZ07oPpF8ZBE5etlPJXXsHaCvJRHJbeu+ltCw7w+H/HdD5xmI7LCNGpgEeAvRalXygKX6zerlhd1O5ShLWRloRBzhdIy+gzNa2s6cc7JEecG+YRRX6jbXI0YeKk=,iv:95gWUw84timc08KyKlhT9MXyrhaSBDJ1Yza+LD/0kQE=,tag:VYo8dH5htqGMTZcBAkVBaA==,type:str]
+    lastmodified: "2023-02-08T20:02:16Z"
+    mac: ENC[AES256_GCM,data:P1ekF6oDc9RRkjm/HfLw44x2T5LglY5Jjn1iLqjd1j84igM7DHn9pzDrrQ3lMdr1mf5IfyjrvoLieMsHwqALEHLtLpzm+uuAoHbiCJhK1C1tEhJXxoddUnBatRqOJ4PzXvo+EUTcqv1aFIQd03KFhREUe8EK8R+JCcy8qvXpURA=,iv:/429XrHu1L2Eaa8KJp6QfFxcxtprCrU3jBG1+T9agS4=,tag:aTsbBUiUhH3lZri+j/ghbg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
