--- a/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-4.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:jPyXhEjA,iv:8NulMv3kMcFNwOrciRP472Ebt/HorrgUwLIY70c/nEc=,tag:46zE9Re5w6+G+vitCUCZUA==,type:str]
-ansible_user: ENC[AES256_GCM,data:c+6zc5BD,iv:4rx6xwssXusdMz1uaJvbVni+217xCJR0yUJ1zYUz7sI=,tag:lh43jOeWJD+LWuNz2FnRLQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:oe0iO8xE,iv:2hc5+kPAH9O7PIYqBZ4mTip3gh8f1gqD0118CmhayRk=,tag:Ru4Vau4JDYHL4V379dy/UA==,type:str]
+kind: ENC[AES256_GCM,data:OMkdN+IC,iv:0m0f0RevctN6kP24mwG9BrFq4NpxtsiAEj16NsRNYUo=,tag:XRdYl0D3oLefHnlMAtJOdw==,type:str]
+ansible_user: ENC[AES256_GCM,data:bL0Kz9lU,iv:+QCce45njpPrClswEVSZNEcvUVlbMy5Vx/gPpm2ErgI=,tag:2nDT58z8l+8q/e4lK1XWTQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:NUi3cQ3W,iv:Ivkb6aVu7VvrjsIOnnv2S7QLH7Vtc10dRWbMBERpp3s=,tag:BQn0PHTBJTEzbYiZvGvA2w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUYUJwckU4OEZLZ0JKUmpG
-            MjBYYTZuTWVzMXkwdjZFcEdoWVRqbHhBeUdVClNWa1o1eXQ3RmtuQjNqK1labFpT
-            SGo4TG4rdi9VaHRualJKb09XTjA2OVUKLS0tIFF6UmRaaGVLd3d2S24ybDlIRFRq
-            VVpVN1NaNmRjenc2TkV0aUZGdDFpVE0KEEMWF00MLTSQ11old4Y/KgcxQO9Fqu8p
-            9kjClGoPNR/MtnnlgfEYRNjBuh6wTM8zIHHm1JHa0G7n9W5XFyvV3Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGdjNsT3hyTW1vWTNKSm94
+            NDVuZEFJVjNvZHJQOUhMa0s2NjROUjBFV3lzCkhkUzFjNW1FU05yRytBbFhIUkpz
+            ZHBwZm9uNUx1Sk12ZVprYVlZZ1NrNmcKLS0tIDZoQ1JjdVJmNXhLc296UVQreG5i
+            cWpraHA0VTBlYjh0VWMwRmcwcXhybm8KcVnHNnAwJHvicwoXZGVkwoJlm9uAPpSN
+            2d695dI2c5fyI7Hrkv1OkNj2X/Pq+V6q8dGqxc2g5aVPW4T8L+AXPQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:51:34Z"
-    mac: ENC[AES256_GCM,data:afwEy/UM+xNhFs2Rurkx4D1G3lgZol4ezdiMpRhewlYRKHShYF15Yjai7tOiOsC2xYAwC4d4Sl1ICDYK8G1dX0p7voEC1/6wS6ovbmBOsXFilNpUJbgIPWE7B3vtONgm9pS57wfH0h7BaSanZq5nDe6qRlQ4aVgQfHJD9NhYI5c=,iv:JGAZnnMeQqn/gekLTEu/QA7V6EyHotnJjw9vu9+x2Es=,tag:pYh6hWdEja8RzgvWF36K3g==,type:str]
+    lastmodified: "2023-02-08T20:02:16Z"
+    mac: ENC[AES256_GCM,data:8VIJS/wCnWpileCwPyRv9Zj6t/xaSImrDXV/tQRokaTIQd4j5GptV3uDToLE6nhe8uCibYTnlTBfFyhyPF235yCIqdLnp6/bqonD6kejOD6UgcEWhWj0xpGL+7zHbLMp/s4wsMK+1qUyAEL5/Tm3yXGtbMz8bFuMW9Ezfcbz7Xs=,iv:lNpHh+aRcQKlC7IRJw7ilf6gxT2Dk8xK40IcUBBSZkc=,tag:Nc0mi0tD54ud/96BHSfN6g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
