--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:b8j1FPvcShfuQqpM8V7cJsk=,iv:yr5Lw13KFyYE+45DrP6jr6scDhHmi04NVlzEER3XEd0=,tag:ZPqqj8xQCPziu5jOVBi/KQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:WJ0oiZrTd4x7z15EVtcNBbWg2Q==,iv:nL2bQ+G122h6emOgnRE2oJf72sumvZY9UiXB1+UcVtk=,tag:Yj0XsvNBTZofIm5FqxvXzw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:HJCCFpnrfbB2AMFMYL4=,iv:dNbXa4aAKj0Toxjd7rClpa8Kx28t5Q39khXn5HzNxuY=,tag:SjnnS7nbMCYwjVVplHEG7Q==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:kchZHBM+J6T9ZO/10tSlHauhhQ==,iv:KTwca8l+Pqywn2HIagQ6WD3C2a54bbBmvD/6Qv++Q1o=,tag:dq0N79fd1+loIzdxGmbyiA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2aVpFY2tPQ2FKanI5aGwr
-            VUNiWjFJZ3dMMDdxbnFKZnlxbm9vbFhKblFJCmczNnZzV3hlc2grZnZrQStJMXlM
-            TU10V0pLTHZ2Q21SNmpsb1ZQZldJL0UKLS0tIDJ6WlBFakFQa3laV2Z6L0JCYmM1
-            VXNrTkZNNm1jOTNjelMwZGdhR0JjbUUKt38c1x7Y2yqsm3men0l7+t8xCCbeiXRs
-            lEdvGuv4q3T0sLlkVWNItJV66YUVUUTdqSitmg7sBK3Hp9aVgjHTOQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4eEVDRkdERXRYclhwbXlU
+            TitnbDREZ01zb0QyN0xyaEZNNTJ5WTlIeHljCkRGbWlHcDZOQWNaWk85bkxVSzc4
+            UUxTNzlKb2FCK09TM3hTbXVqaTY3R28KLS0tIEM3cDVPcFFicUdXcXVDZlM5LzhC
+            cEczUHY1Q1loUy9BMTNKalFpVzJab2sKZocQhoI+V+Vd2qyNXywdbB0c/Z5/xW28
+            heW1zcr3W/oOzfvesW6cGjjTwL1fz1plJKZ2PXlrmkGkO2DPVNgmIg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:51:34Z"
-    mac: ENC[AES256_GCM,data:VX7b94Syr843NyFEoV0hIY0H9/Q9CDnT+qPyvXCStt3JnXL3uqbppvu9EiWZtrQlUiQpxOjlwsrwr0UwSCW+ru3DLP1DV4B7YtvL5KvTdqCoGWy/T6mnUQqslTQzqUXKAnJ4iBrkOzvU1yT1X2at6dxpiXOdUjkCTrBVa1ihLFw=,iv:VhP/T9ccfj5KV0im+bhnlFL4tyfF2CGIFuplEyN5oMg=,tag:M/Rh05qsJxB5CqvxUXFL4Q==,type:str]
+    lastmodified: "2023-02-08T20:02:15Z"
+    mac: ENC[AES256_GCM,data:D/nxEmBtJdJ8uvO+aOlPr67/yIbo1OWeM8E7BE3UQZyCfGR6isnRZQw8As0cgb4V5xAvpXWLzcZMl/Cb7QpT4K1tlDrZT7n1LUxORiHcQ0xcjmwCsrLZbThO0+2biy/i4WY2GPbYIDTw7Ro1kjP4hKGKbLmmamS4G6ouOq5kU/0=,iv:kHXIPikoEWB7V64fPneoVA9Z12r5Xlb3rjveZGE3gKQ=,tag:lTVq5z1nV6qTcGPzlc6tIA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
