--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:xYE74XoL,iv:doM/HnHQExBkn8PiY7H9mwXSDVx26BtJAuTBcyAMSFA=,tag:xpV4aND3phXJ0vvm0a0q1w==,type:str]
-ansible_user: ENC[AES256_GCM,data:JeihR3y4,iv:clnU/NR62xRntA267QRP9TuErQ2VzbSBXkb95vLyq5U=,tag:c6uzkY2tzNTEFCpidrTiNg==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:1aJ6H2M7,iv:+IyHxmtBDaXCtN2aX3RF1fjhZEEMY4iOhiVYkMypk5I=,tag:4F944ny8+2XxWoYHMKXpoQ==,type:str]
+kind: ENC[AES256_GCM,data:r9rbvn+5,iv:K0nVDDvkjmRHQnfAs0S9z1NaSQOX6NWtai8sElR6Yh0=,tag:t3omJLeAzQ4Gex65gFpWgQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:rkVd/9p0,iv:ifcnaFyxsyrR+FxIlcMaVMIJ5Ae0YPe1DZRcKCrab00=,tag:ujA62f1C8ZLStFhd1G2cuw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:1bbP0nKY,iv:yAMnV76sOJ5pkq9bETr8qt2PGvv5bZCjP/zqm70HL4c=,tag:lXvt6b5GHOlCCVhasLDKyA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBobHdQcmE0ZWJ0bjVEd3A2
-            NUl6R2ZRS3BycllvMGY4MVo2VDJwUjRRdzM4CkhCVkczV0ZrYktVN1F2aVVldWRv
-            OWRaVTU0Zk1wWG1CUFlraTNjZmh5MXMKLS0tIFdUQVlxdUlwSlVaTmgrdmJHb3pr
-            MlNIb2NxT2NnTlVjNDQ1MFh1TVJRNzQK+wBnyOvPm4hfHrUbKhHzVce63YlDV1W6
-            OA8M79HozyHA/A//10YtP1BszBkxk+SY4cGVfvMzm7GtG2A1JJ63ng==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTVG9TVDZoMHhsSitObXpz
+            NGFENVUrNHk2MTJZQlQ3c2U2ZzRmWnJqeVhvCnN3SGxJRXFiUHNnK3hCYXlBa2lh
+            UnVsT1Y1WVE1bFlVZjBEaTNPV2hmVG8KLS0tIGZkQjR3RWFEU0tNWmszZjNYS3N3
+            c3R5b1pLNnI5T3N5c0dUSlgzcHNYMHMKE0Kym3joOybq07G/S9Ad6whWOzl/LraA
+            IGiSlxdIhrkeykho22SJqduotIxSRakakNyJEa1M0eoJ9vrYg/qCZw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T17:51:34Z"
-    mac: ENC[AES256_GCM,data:4eIC+wdpYIxhru1Bu77R1s1BXvKuDSdwh3pKwUrKatL08jqme9Mc9i6hSpg9+ngbVKD2SUOLNMHt8fkZDaLXrJHcJ3v9syKEeX5tVPkXqRnSPNSx6rzyf9T8OeoV8DPeEAXMUj+LDEdWAsYywrzUWTn9oHjBYqaVZFHzwtkkMP4=,iv:cWF5qtU4eT/bKV5EcAQg3sQGULwavqxrjGvy5nn3wXQ=,tag:DMC9AEX7G5PyRH67UwRICA==,type:str]
+    lastmodified: "2023-02-08T20:02:16Z"
+    mac: ENC[AES256_GCM,data:HchQotY+jhjCm9EOHH3G6eaEszvlrB7ux+F0DT9zFRzpQ3jVZfYFS//T2GmGXsA11VYArDO08yho/GKAJBrXdE2zvssOnQRpT75aMdL0sLsxTB0RZJXSu4tYSd5B73S2ClVTp+YdOauB5Js1eavEpcIXnCxGmGvn36B3nLbmbdM=,iv:yxvj0hIHK6OLD3MjJbeAAR+pe9bBF5kNP7UE3KXzrt0=,tag:6WbuysFoiBhbtb30QpyF5A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
