--- a/kubernetes/apps/home-automation/zwavejs2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/zwavejs2mqtt/app/helmrelease.yaml
@@ -58,13 +58,13 @@ spec:
         annotations:
           kubernetes.io/ingress.class: "nginx"
         hosts:
-          - host: "z.climatejungle.com"
+          - host: "z.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - "z.climatejungle.com"
+              - "z.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
