--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - ./namespace.yaml
   - ./home-assistant/ks.yaml
   - ./mosquitto/ks.yaml
-  - ./zwavejs2mqtt/ks.yaml
+#  - ./zwavejs2mqtt/ks.yaml
