--- a/kubernetes/apps/home-automation/zwavejs2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/zwavejs2mqtt/app/helmrelease.yaml
@@ -2,75 +2,89 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: zwavejs2mqtt
+  name: &app zwavejs2mqtt
   namespace: home-automation
 spec:
-  interval: 5m
+  interval: 15m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
-      chart: zwavejs2mqtt
-      version: 5.4.2
+      chart: app-template
+      version: 1.2.1
       sourceRef:
         kind: HelmRepository
-        name: k8s-at-home
+        name: bjw-s
         namespace: flux-system
-      interval: 5m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 5
+  upgrade:
+    remediation:
+      retries: 5
   values:
     image:
       repository: ghcr.io/zwave-js/zwave-js-ui
-      tag: 8.8.4
+      tag: 8.8.3
     env:
       TZ: "Europe/Amsterdam"
-    securityContext:
-      privileged: true
-    resources:
-      requests:
-        memory: 200Mi
-        cpu: 50m
-      limits:
-        memory: 500Mi
     service:
       main:
         ports:
           http:
-            port: 8091
+            port: &port 8091
           websocket:
             enabled: true
             port: 3000
-            protocol: TCP
-            targetPort: 3000
+    probes:
+      liveness: &probes
+        enabled: true
+        custom: true
+        spec:
+          httpGet:
+            path: /health
+            port: *port
+          initialDelaySeconds: 0
+          periodSeconds: 10
+          timeoutSeconds: 1
+          failureThreshold: 3
+      readiness: *probes
+      startup:
+        enabled: false
     ingress:
       main:
         enabled: true
-        annotations:
-          kubernetes.io/ingress.class: "nginx"
+        ingressClassName: "nginx"
         hosts:
-          - host: "z.${SECRET_DOMAIN}"
+          - host: &host "z.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - "z.${SECRET_DOMAIN}"
+              - *host
+    securityContext:
+      privileged: true
     persistence:
       config:
         enabled: true
-        emptyDir:
-          enabled: false
+        existingClaim: zwavejs2mqtt-config-pvc
         mountPath: /usr/src/app/store
-        storageClass: longhorn
-        accessMode: ReadWriteOnce
-        size: "1Gi"
-        skipuninstall: true
       usb:
         enabled: true
         type: hostPath
         hostPath: /dev/serial/by-id/usb-0658_0200-if00
         hostPathType: CharDevice
+
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
             - matchExpressions:
                 - {key: "feature.node.kubernetes.io/custom-zwave", operator: In, values: ["true"]}
+
+    resources:
+      requests:
+        cpu: 10m
+        memory: 100Mi
+      limits:
+        memory: 500Mi
