--- a/kubernetes/apps/home-automation/zwavejs2mqtt/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/zwavejs2mqtt/app/helmrelease.yaml
@@ -2,89 +2,75 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app zwavejs2mqtt
+  name: zwavejs2mqtt
   namespace: home-automation
 spec:
-  interval: 15m
+  interval: 5m
   chart:
     spec:
-      chart: app-template
-      version: 1.2.1
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
+      chart: zwavejs2mqtt
+      version: 5.4.2
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: k8s-at-home
         namespace: flux-system
-  install:
-    createNamespace: true
-    remediation:
-      retries: 5
-  upgrade:
-    remediation:
-      retries: 5
+      interval: 5m
   values:
     image:
       repository: ghcr.io/zwave-js/zwave-js-ui
-      tag: 8.8.3
+      tag: 8.8.4
     env:
       TZ: "Europe/Amsterdam"
+    securityContext:
+      privileged: true
+    resources:
+      requests:
+        memory: 200Mi
+        cpu: 50m
+      limits:
+        memory: 500Mi
     service:
       main:
         ports:
           http:
-            port: &port 8091
+            port: 8091
           websocket:
             enabled: true
             port: 3000
-    probes:
-      liveness: &probes
-        enabled: true
-        custom: true
-        spec:
-          httpGet:
-            path: /health
-            port: *port
-          initialDelaySeconds: 0
-          periodSeconds: 10
-          timeoutSeconds: 1
-          failureThreshold: 3
-      readiness: *probes
-      startup:
-        enabled: false
+            protocol: TCP
+            targetPort: 3000
     ingress:
       main:
         enabled: true
-        ingressClassName: "nginx"
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
         hosts:
-          - host: &host "z.${SECRET_DOMAIN}"
+          - host: "z.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
         tls:
           - hosts:
-              - *host
-    securityContext:
-      privileged: true
+              - "z.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
-        existingClaim: zwavejs2mqtt-config-pvc
+        emptyDir:
+          enabled: false
         mountPath: /usr/src/app/store
+        storageClass: longhorn
+        accessMode: ReadWriteOnce
+        size: "1Gi"
+        skipuninstall: true
       usb:
         enabled: true
         type: hostPath
         hostPath: /dev/serial/by-id/usb-0658_0200-if00
         hostPathType: CharDevice
-
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
           nodeSelectorTerms:
             - matchExpressions:
                 - {key: "feature.node.kubernetes.io/custom-zwave", operator: In, values: ["true"]}
-
-    resources:
-      requests:
-        cpu: 10m
-        memory: 100Mi
-      limits:
-        memory: 500Mi
