disable authentication for code-server

--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -74,6 +74,8 @@ spec:
           tag: 4.7.1
         workingDir: '/config'
         args:
+          - --auth
+          - "none"
           - --user-data-dir
           - '/config/.vscode'
           - --extensions-dir
