change renovate schedule

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,7 +18,11 @@
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prIgnoreNotification"],
   "rebaseWhen": "conflicted",
-  "schedule": ["every saturday"],
+  "schedule": [
+      "after 10pm every weekday",
+      "before 5am every weekday",
+      "every weekend"
+    ],
   "pre-commit": {
     "enabled": true
   },
