--- a/kubernetes/flux/repositories/helm/kubereboot.yaml
+++ b/kubernetes/flux/repositories/helm/kubereboot.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://kubereboot.github.io/charts
+  url: https://kubereboot.github.io/charts/
