--- a/kubernetes/apps/networking/pihole/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole/app/helmrelease.yaml
@@ -34,6 +34,19 @@ values:
       metallb.universe.tf/allow-shared-ip: "home-assistant-172.16.2.122"
     type: LoadBalancer
 
+  ingress:
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: "nginx"
+    hosts:
+      - host: "pihole.${SECRET_DOMAIN}"
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - hosts:
+          - "pihole.${SECRET_DOMAIN}"
+
   podDnsConfig:
     enabled: true
     policy: "None"
