--- a/kubernetes/apps/networking/pihole/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole/app/helmrelease.yaml
@@ -39,13 +39,13 @@ spec:
       annotations:
         kubernetes.io/ingress.class: "nginx"
       hosts:
-        - host: "pihole.${SECRET_DOMAIN}"
+        - host: pihole.${SECRET_DOMAIN}
           paths:
             - path: /
               pathType: Prefix
       tls:
         - hosts:
-            - "pihole.${SECRET_DOMAIN}"
+            - pihole.${SECRET_DOMAIN}
 
     podDnsConfig:
       enabled: true
