--- a/kubernetes/apps/networking/pihole/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole/app/helmrelease.yaml
@@ -27,29 +27,16 @@ spec:
       passwordKey: "password"
 
     serviceWeb:
-      loadBalancerIP: 172.16.2.122
+      loadBalancerIP: 172.16.2.123
       annotations:
-        metallb.universe.tf/allow-shared-ip: "home-assistant-172.16.2.122"
+        metallb.universe.tf/allow-shared-ip: "pihole-172.16.2.123"
       type: LoadBalancer
 
     serviceDns:
-      loadBalancerIP: 172.16.2.122
+      loadBalancerIP: 172.16.2.123
       annotations:
-        metallb.universe.tf/allow-shared-ip: "home-assistant-172.16.2.122"
+        metallb.universe.tf/allow-shared-ip: "pihole-172.16.2.123"
       type: LoadBalancer
-
-    ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
-      path: /
-      hosts:
-        - pihole.${SECRET_DOMAIN}
-
-      tls:
-        - secretName: pihole-tls
-        - hosts:
-            - pihole.${SECRET_DOMAIN}
 
     podDnsConfig:
       enabled: true
