--- a/kubernetes/apps/networking/pihole/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole/app/helmrelease.yaml
@@ -17,7 +17,7 @@ spec:
   values:
     image:
       repository: "pihole/pihole"
-      tag: ""
+      tag: "2023.02.1"
       pullPolicy: IfNotPresent
 
     persistentVolumeClaim:
