--- a/kubernetes/apps/home-automation/node-red/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/node-red/app/helmrelease.yaml
@@ -25,6 +25,15 @@ spec:
       FLOWS: "flows.json"
       NODE_RED_ENABLE_PROJECTS: "true"
       NODE_RED_ENABLE_SAFE_MODE: "false"
+    service:
+      main:
+        type: LoadBalancer
+        loadBalancerIP: 172.16.2.122
+        annotations:
+          metallb.universe.tf/allow-shared-ip: "home-assistant-172.16.2.122"
+        ports:
+          http:
+            port: 1880
     ingress:
       main:
         enabled: true
