fix to certificate of node-red

--- a/kubernetes/apps/home-automation/node-red/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/node-red/app/helmrelease.yaml
@@ -44,6 +44,13 @@ spec:
       tls:
         - hosts:
             - "nodered.${SECRET_DOMAIN}"
+          certificate:
+            enabled: true
+            name: "node-red-cert"
+            issuerRef:
+              kind: ClusterIssuer
+              name: "letsencrypt-production"
+
     persistence:
       data:
         enabled: true
