fix node-red cert

--- a/kubernetes/apps/home-automation/node-red/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/node-red/app/helmrelease.yaml
@@ -49,6 +49,7 @@ spec:
             issuerRef:
               kind: ClusterIssuer
               name: "letsencrypt-production"
+              secretName: node-red-tls
 
     persistence:
       data:
