--- a/kubernetes/apps/default/lidarr/ks.yaml
+++ b/kubernetes/apps/default/lidarr/ks.yaml
@@ -20,3 +20,6 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 15m
+  dependsOn:
+    - name: cluster-apps-longhorn
+    - name: cluster-apps-ingress-nginx
