--- a/.github/renovate/autoMerge.json5
+++ b/.github/renovate/autoMerge.json5
@@ -24,8 +24,17 @@
       "matchManagers": ["github-actions"],
       "automerge": true,
       "automergeType": "branch",
-      "ignoreTests": true,
-      "matchUpdateTypes": ["minor", "patch", "digest"]
+      "requiredStatusChecks": null,
+      "matchUpdateTypes": ["minor", "patch"]
+    },
+    {
+      "description": "Auto merge container digests",
+      "matchDatasources": ["docker"],
+      "automerge": false,
+      "automergeType": "branch",
+      "requiredStatusChecks": null,
+      "matchUpdateTypes":  ["digest"],
+      "matchPackagePattern":  ["ghcr.io/k8s-at-home", "ghcr.io/onedr0p"]
     }
   ]
 }
