--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -8,10 +8,12 @@
     ":enablePreCommit",
     ":automergeDigest",
     ":automergeBranch",
-    "github>onedr0p/flux-cluster-template//.github/renovate/autoMerge.json5",
-    "github>onedr0p/flux-cluster-template//.github/renovate/commitMessage.json5",
-    "github>onedr0p/flux-cluster-template//.github/renovate/labels.json5",
-    "github>onedr0p/flux-cluster-template//.github/renovate/semanticCommits.json5",
+    "github>vdhict/home-lab//.github/renovate/allowedVersions.json5",
+    "github>vdhict/home-lab//.github/renovate/autoMerge.json5",
+    "github>vdhict/home-lab//.github/renovate/commitMessage.json5",
+    "github>vdhict/home-lab//.github/renovate/groups.json5",
+    "github>vdhict/home-lab//.github/renovate/labels.json5",
+    "github>vdhict/home-lab//.github/renovate/semanticCommits.json5",
     "helpers:pinGitHubActionDigests"
   ],
   "dependencyDashboard": true,
