changes to node-feature discovery

--- a/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-0.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:r9rbvn+5,iv:K0nVDDvkjmRHQnfAs0S9z1NaSQOX6NWtai8sElR6Yh0=,tag:t3omJLeAzQ4Gex65gFpWgQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:rkVd/9p0,iv:ifcnaFyxsyrR+FxIlcMaVMIJ5Ae0YPe1DZRcKCrab00=,tag:ujA62f1C8ZLStFhd1G2cuw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:1bbP0nKY,iv:yAMnV76sOJ5pkq9bETr8qt2PGvv5bZCjP/zqm70HL4c=,tag:lXvt6b5GHOlCCVhasLDKyA==,type:str]
+kind: ENC[AES256_GCM,data:PYeLTIRz,iv:iebjQa2ARyz33gor+9ZQk43mD1RBzVhzOFjXeKoVswE=,tag:MB6VOnvta1JCUntFJE4Pvg==,type:str]
+ansible_user: ENC[AES256_GCM,data:JworsSrU,iv:J0F/8WyAc9LLPTUL+QHQzZO78fOPB/w7XvKYVpPbCzE=,tag:rnH/09e0v3nKpr4Ph6E+oA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:BNCKpd02,iv:iAi6kAQHZm/zvTWR9V9IyBFbpJraS0tu570pOfbA07Y=,tag:McddQP43FVLDNqiIqvHx5A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTVG9TVDZoMHhsSitObXpz
-            NGFENVUrNHk2MTJZQlQ3c2U2ZzRmWnJqeVhvCnN3SGxJRXFiUHNnK3hCYXlBa2lh
-            UnVsT1Y1WVE1bFlVZjBEaTNPV2hmVG8KLS0tIGZkQjR3RWFEU0tNWmszZjNYS3N3
-            c3R5b1pLNnI5T3N5c0dUSlgzcHNYMHMKE0Kym3joOybq07G/S9Ad6whWOzl/LraA
-            IGiSlxdIhrkeykho22SJqduotIxSRakakNyJEa1M0eoJ9vrYg/qCZw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3UHRvbUlWcmRiMlEwcDgx
+            azdZM0FSZjJmbFZpUjhpNkZMd0x1VklCajI0CkUxSE1zQm92aXlkR0pFbmU4YlM4
+            TklzVmpjdDJDUlNKczlTVHBQbG1yRkkKLS0tIExPMGovYTFFK1ZRZ0ZlSk1TQUU4
+            Y3A3RTI3eUhRTHJaQm1kakFwc0c2REEKZbjcgvQ5PSuXp1MmIWlTZy+jm4KmOxnt
+            1PaN4OsD+goNtrQzElYQs8817fehYZQmZ11FK8GOLV/5Lj+tBKiuyw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T20:02:16Z"
-    mac: ENC[AES256_GCM,data:HchQotY+jhjCm9EOHH3G6eaEszvlrB7ux+F0DT9zFRzpQ3jVZfYFS//T2GmGXsA11VYArDO08yho/GKAJBrXdE2zvssOnQRpT75aMdL0sLsxTB0RZJXSu4tYSd5B73S2ClVTp+YdOauB5Js1eavEpcIXnCxGmGvn36B3nLbmbdM=,iv:yxvj0hIHK6OLD3MjJbeAAR+pe9bBF5kNP7UE3KXzrt0=,tag:6WbuysFoiBhbtb30QpyF5A==,type:str]
+    lastmodified: "2023-03-20T12:05:26Z"
+    mac: ENC[AES256_GCM,data:5MugsMQ+XN0aFOOaLdfJMLfvJAKrcChsJwYOSahYYb+5Uo7nwNuivPhpHRzVJH+mMDEM0AOc4pKSGN1jSSqogSEkeG6L/KHD0NEzQ5bp5nvgBTZkBxXMUeEx4ORg4vv531TXlQHctdhL43bzG/p1SrkZSlEv8ufoH1prlcBX40I=,iv:gvZ2ugseeBl+/kHsm8I+TPm/iV6jSlkTDGH9hUxs5sU=,tag:R+1Ha2q1CjP169jL7opQSQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
