--- a/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:GVpdPvX/,iv:UjSf1uSGVPZncSPDmxZVUeLYFiHRhQ7k2D7OQto/Gno=,tag:flnwqTb1ObdfTe6wnYOqeg==,type:str]
-ansible_user: ENC[AES256_GCM,data:03GEcfIP,iv:xZEMkEcYc/0MY4JwQK0Qtr7whzSCtkxgKjWeHjclp3w=,tag:rUPHHjc7KOrqO+rPK3Y4Og==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:CX3rqkii,iv:vNOkwU1lDDuuRDr95fKGrJaPiIVpoK6QymnDykSxRjk=,tag:7jyAtoLMY8Ij0Xl1qx6uyA==,type:str]
+kind: ENC[AES256_GCM,data:6ZlwL62a,iv:6uTTRArWeyK7j0P0Czq4xWjmUElH6Hl+zq88NzZe7ew=,tag:4TXycHiYTPu1QwI7YR1Dqg==,type:str]
+ansible_user: ENC[AES256_GCM,data:TgffN0y3,iv:QJk0zuzHlpT0oJJvj5Tn+njtFCMxy3g50h/9mHa9LG4=,tag:GM5rsulUjF4seK7WZrpU1w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:NvKTaFwn,iv:5Uff9IhD0kixx6pGG5GHqA0G3SMQEKRZzB1Cs72RNm8=,tag:ru2/THErzuEFnDHHcAZj/g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFWjZyb1VveXRjck8xL09J
-            UHZmUWVKNXFwNUh4RVRHQUNnY3gySWVDbnk0CmpQMUdYc0VSQ0lKUjEyMm1IU25B
-            WWtIU1grdWxpU3NzUmdxelp1QjZldUkKLS0tIEQ4d1pnWHJIaG9PWjdudW5BV0RR
-            OWZIcGVMYlJGVHNXSkh5aUYzellQZlUKF4UQaPWBa24pjfbat1K7ZZ9sgJnekInC
-            K1mu3BeVWBsWc7rFtrIbhmusw77Yp534Y0ldVP4p8LIxJoV16uMgow==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBPODRZd1hjaGlYWkJYZk4w
+            U0ptcTB6eUpEOGFXdTdIbkpDd2MxMmdMbHhJCitDUGZVVzUrL2xLd1V2YnF5bDBY
+            MVdwZ3U2ay9LQ3pHUjlNRFVKQ0ZKTTQKLS0tIENRVndIcTQxcHNoMjlhQlgvVmpU
+            dHd1NjhYRU01Q3dwbFRTMnhlZXNOSWMKhXpok33aGWAFUf3ImHvMNmwFaOPROKGv
+            w/wSP6ug5Nqm/Id1lmEpbfP7rTCwsKZNTaPh2tO3nxi6XhuktwZyvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T20:02:16Z"
-    mac: ENC[AES256_GCM,data:fPTQJvYOSQczGOEPBHw80HGVd9cCCBzRQE3+DNwhtJEANcuvUZEoQ8pqUTrpF+uxZrumS7UEj/FQ8w4DMfTNWmjk4ZwL4yaqJLqVYtWoE6+MYhn/sidn4sLGHjsL4JswR96TTNfAbq+RADxl0hs3RRn4rNLgHiRzxmChZzXjl8U=,iv:4RQjCGIfh/fZu9M57GOaSv+NZjp9N9InQYax/p66jzY=,tag:hiKc0P9cJYUP2Lr4g7arZA==,type:str]
+    lastmodified: "2023-03-20T12:05:26Z"
+    mac: ENC[AES256_GCM,data:pFF/LjyvEEdbvxvN8W7Cr8EBtA0aV/cvir0LGq5qes5SXUx7aNQYvHEoLwjHpmX2p2SBCRNm8lqOPPexWnblLucPNQj9EnwHk4Fex4VfVqlDfDpyaPr0yvxs44VQkwZhWp8SQFakYnEECULCa8d7HGxkiKoiLeiE9uOBmt/2vXQ=,iv:47lDfSn8SzJq9k5o2tQdkRV4RTzQQQALsdYv/fYRI/8=,tag:f+z5RNH7y74wYO90uJyW0A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
