--- a/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-2.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:Z5MR70TK,iv:LYR3WSg2anbfPHXXa+Jt0LBLrMhpKc4XA9A4ye4lZu4=,tag:ON+HuaEaaRMprvBCWIHlJQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:Ots9MhfY,iv:F6+zhlmXKO5fv4r7tjPEMch04Z3I+tamcYp7wOBC8NE=,tag:ObLI+oA/8HQ6wvaWNK48XQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:fdCMPtFG,iv:lNCceP3Zr0hzhPPZd+uqqf8jxPrV5TWcLzdx7B0WZLk=,tag:OAIyisZT964ParRYP9gTXg==,type:str]
+kind: ENC[AES256_GCM,data:Dgiyd+47,iv:qXHwqi2UPqo/+Wh9qss9re71BReIsZHNxi6tyCG6VBs=,tag:63sKRyMLGHtugLwg5BvAyw==,type:str]
+ansible_user: ENC[AES256_GCM,data:Rzkm/Qou,iv:FatbO+zRWkojXLsGgbpVVs9Flc6ZCvNNvEPZMuSpn6o=,tag:vtVPGEVXQhNBRLsO6oOvBQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:6Smp+uRk,iv:P5JoCHKREMf/Nko84aS0T4KjB5/pRlaKkvO0tmQDWQc=,tag:cEpQtqOvHyUnLIoQRukIjA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYaGRMcjExbklBd1hLdm9w
-            aHhCQTFPTkx5VmhNOFAwdStNdzRzWkZxUFVrClZuOXA3dU9qTytqUFNUcXhtbFJP
-            R2dZUjg3WmF1SDNRUXdxbDk0SHZDK28KLS0tIFBiajYweWZ0RVdtRkdyeGpZS21q
-            MnBVOVBWWEpjd084YWszYVFNbDZKcU0K4Z4K+j6DZ1oJzk/Rk06IsbHu2gsMLeF0
-            seDC6rDJO/YX6Z5PyNvlU2HfYXqqnqR08T8Jad6e4zTNDDf7aCBbEw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhN1ZidjhuTU1JdGZic3RK
+            R2FZcU9MMXRqS2psTUR6R3lMR2lhVS9zMWlJCjQ0aVZOWnRVUEVVQVVrY2VmOU1t
+            T256SDljMm0wNy9oS0pOQTNKVjFtODQKLS0tIFdVVHQ5ZmoyUS85dTNhVkkrVlJJ
+            S0FadDhsNGgvRnAvczhRVVVndDJpcm8KU2VgOXn8sWT5WLU1RXUcQj/jDFjvow5J
+            pKy2d7+lcedmUdM2mfCLKxmAklj5A/QiGg74uCTU0GggwClCmmYteA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T20:02:16Z"
-    mac: ENC[AES256_GCM,data:R6f2gueorvlr3Mh8pPSHY9ZQyXQZi6mFyrjVei6cD7vzcQqTcq8RAiNVNMbCd7nIXB0PNLal6Ttj1gZBb9ByzbGsHNOULwiLKFuCQFLE0jFxz2mok9iixkqAtCCudW1p8PZ05ZhYJ+1ItLl0TrL/Oomg4NyNmP166Ed/dpK30Cw=,iv:jr2xWGVjivj/myGTszV7LvdRFkD8uaMxYdNP0fYcXHk=,tag:JV/19p2VKyaq/tESwzsFwQ==,type:str]
+    lastmodified: "2023-03-20T12:05:26Z"
+    mac: ENC[AES256_GCM,data:QdmRQefGkwXJhR4bgRhe3987nDgO/79Lr/5NwrDlJe6ibuIEjv48sLY+Pi0Bb7i/5/oVAWnZxLKbdX3vW41pBqmUy5VLOWUQSZiPB9ZeTT7isq4lscKxXPtMAY0WlhTrvj/9kdl2S1Q+MCcU6JJVAJLD1Rol1piOAkhAJHQe/MM=,iv:v2bJ9h58nsk6SqERAx6QQzcAXlTDQdV8DbBMk6l+CkQ=,tag:TV9dvOWcipMOkAqYKq151g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
