--- a/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
+++ b/ansible/inventory/host_vars/vdh-k8s-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:owsbrCZQ,iv:bWtjknus1Dc2mTBYBGTK1QkXNmWS+R4GyxJ3tRoKgyI=,tag:z6yVcdykjpW/rkdiUR8eJw==,type:str]
-ansible_user: ENC[AES256_GCM,data:8gV5QXyk,iv:3lxIKmBR1WswPZXzvhwSOb/WakUiIhGUCWZpI3qjG9I=,tag:9+SfptoiyNg9jlGVta2Yiw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:GjrkP5M/,iv:HyKznvQro9OHPbibF10ylO5K4AsrPrzVIXMJHdpAxA0=,tag:cEj526vL9Uca7KHV7q+Xjg==,type:str]
+kind: ENC[AES256_GCM,data:jDom2Ppv,iv:8mTyTDnSBBiaWWfCOaw61edsFlEklXWrzO64PhNFwN8=,tag:yvMaTGnX5Kp20TZeNYygfw==,type:str]
+ansible_user: ENC[AES256_GCM,data:Q1jUJuvC,iv:cascjWx5Fzi5w/pF9oHLW1gLl3RvStSEqhSaOH3d2SI=,tag:FTNknXaLiUKVXhQdQ6LX4w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:wnLq0AuG,iv:u15iEwWBi6y+eGKGdMIPEsdqW/Yql11YlGwqoIR0gRs=,tag:P3wP01Kudzh1L9ecVUDGzQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBacHp0d1phWll5ZlB1UHZC
-            ZHZLZW1kUlVlSDN0TVVDWnVrQ042dUpRRms4ClptRUNqbkF5K2lqK2UyaENQY0ts
-            TnhoUUd6MDVOQU15WmdrYlppbE9oMjAKLS0tIHJTbXlZcWF5bTRCemR3dStmSGpC
-            OVYwa2R5S3QwWmJzSENVNkZLWlBUOUkKNs6tO3IPJm+UVB1E8aRrylMiagpqsVmA
-            a3T6ytKU2zU563SqVN43zl9sYC55s1nkIlfXOQblnGp8kNqS6o2n5w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5VXpUOWVMcUJNMURzNlk0
+            VG9qSlJsNXh1allTU1B0V29aSTh5Z3Uwd2xnClNLY0NGSnI5STFCNWhXSTlBNVh0
+            c2NSRWRianJDdzArLzdsbndVK2tVSGsKLS0tIFI1ZEhYN0ZkZWVkRm9qSGIzQnQy
+            T3hOUVFNZkNHOWJKL3piYnVNYlhBRlkKozPCucxLqML/CGdtz5dX9DXeC9oioics
+            HUP0p9JZO36ttvGZ6L9LTyzkPFnShv5BdNbYsigK1PreP7In0CNyBw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T20:02:16Z"
-    mac: ENC[AES256_GCM,data:P1ekF6oDc9RRkjm/HfLw44x2T5LglY5Jjn1iLqjd1j84igM7DHn9pzDrrQ3lMdr1mf5IfyjrvoLieMsHwqALEHLtLpzm+uuAoHbiCJhK1C1tEhJXxoddUnBatRqOJ4PzXvo+EUTcqv1aFIQd03KFhREUe8EK8R+JCcy8qvXpURA=,iv:/429XrHu1L2Eaa8KJp6QfFxcxtprCrU3jBG1+T9agS4=,tag:aTsbBUiUhH3lZri+j/ghbg==,type:str]
+    lastmodified: "2023-03-20T12:05:26Z"
+    mac: ENC[AES256_GCM,data:g2Rr9oF7DMZ9OMnKXD9LZ8zzzsuljRyeihoOrTlut+USufCjhUAGSkeg9AEfc6P5wsS8xlcIjE45/1bx3qEVktFcpIHGTDf5y6csdrvqSLPFmF9brLUNagWPE1CRx6YeGhNQcamwsV4eWOvct7RgztxJOquWPwa2GkvTU3Cd0j4=,iv:UP74S2aZtI6EFJ6rQdRe3SCuqHK+VSajDm08vn+F2NA=,tag:6d3NVKOwJFEz3zf2T4RY7Q==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
