--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:HJCCFpnrfbB2AMFMYL4=,iv:dNbXa4aAKj0Toxjd7rClpa8Kx28t5Q39khXn5HzNxuY=,tag:SjnnS7nbMCYwjVVplHEG7Q==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:kchZHBM+J6T9ZO/10tSlHauhhQ==,iv:KTwca8l+Pqywn2HIagQ6WD3C2a54bbBmvD/6Qv++Q1o=,tag:dq0N79fd1+loIzdxGmbyiA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:/Mx4d2jm0lnwd/hVQ8U=,iv:IJ3mbh+M4QjM77rKM6s0AmtyAs039Z6WLwqA9d7k7QI=,tag:6jK07VGZ5Rvx89HgyQvxeQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ar9s+s4IXbAQnZf5zhRBMLRbVg==,iv:bTi2zf1EjhkciUIzhionuZS/9EpuIsUrzI+1qIq7e/E=,tag:nYlz1xDWRBKq+2hxQwS0FQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1h3rcgxnp3xuw2qeetc5ralh4d6rfp8w77yx4kgqyrmaayc7v24uqx6a4j7
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4eEVDRkdERXRYclhwbXlU
-            TitnbDREZ01zb0QyN0xyaEZNNTJ5WTlIeHljCkRGbWlHcDZOQWNaWk85bkxVSzc4
-            UUxTNzlKb2FCK09TM3hTbXVqaTY3R28KLS0tIEM3cDVPcFFicUdXcXVDZlM5LzhC
-            cEczUHY1Q1loUy9BMTNKalFpVzJab2sKZocQhoI+V+Vd2qyNXywdbB0c/Z5/xW28
-            heW1zcr3W/oOzfvesW6cGjjTwL1fz1plJKZ2PXlrmkGkO2DPVNgmIg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzMUJMVFp2S1BEcnUzek5E
+            SEx3bjlNZkRDbVRsK2d1by9NL2JlOTBWb1JFCmFrUHlMQ2gyYUF0UE5STWp4QkV0
+            aysxY0hqSllzeW9SSXNCd3ZVZXZ6TncKLS0tICttdlY5dHRCZnY2OUcvUVJoVGlp
+            eFVJRklUcSt3UjI0M2lIY0hYalFqekkK+YgK42TKlF5UvJA9V4NBnrRHUxV6gvgw
+            obg2rd8k0joLpVkkCJC/WzgWLDQfsYmcgnggq3+31SaaPVeB5WkLPw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-08T20:02:15Z"
-    mac: ENC[AES256_GCM,data:D/nxEmBtJdJ8uvO+aOlPr67/yIbo1OWeM8E7BE3UQZyCfGR6isnRZQw8As0cgb4V5xAvpXWLzcZMl/Cb7QpT4K1tlDrZT7n1LUxORiHcQ0xcjmwCsrLZbThO0+2biy/i4WY2GPbYIDTw7Ro1kjP4hKGKbLmmamS4G6ouOq5kU/0=,iv:kHXIPikoEWB7V64fPneoVA9Z12r5Xlb3rjveZGE3gKQ=,tag:lTVq5z1nV6qTcGPzlc6tIA==,type:str]
+    lastmodified: "2023-03-20T12:05:25Z"
+    mac: ENC[AES256_GCM,data:1rXh2GQIWYZeEJ3qRPmSkztm7YbfNUqB9Jt79yNfA//RWsXvwR3X6TiYGpY9wBAHDcFjALTOjPjlISJoUooxoAHPz9kLZlXNC/GbyU2R9wOflhcmG8SDtuxyv/dp05Ga5H7yvZ8RvTs2TyzBuTo/l0AxN3X8RsgM7Ku5KtrCPrc=,iv:5CzLQw++GlTGR2pKhFCW7LXeDGBd0l6aBON2vHBr2c0=,tag:lCvnCSyN0irsMAsDpqhLqQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
