change vscode settings. yaml for kubernetes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,8 +26,7 @@
     },
     "yaml.schemaStore.enable": true,
     "yaml.schemas": {
-      "ansible": "ansible/**/*.yml",
-      "kubernetes": "kubernetes/**/*.yaml"
+      "ansible": "ansible/**/*.yml"
     },
     "editor.fontFamily": "FiraCode Nerd Font",
     "editor.fontLigatures": true,
